# wasm-big-image

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile-in-docker.sh  deno.jsonc  deno.sh  run_tests_deno.sh  wasm-big-image.js
.github/workflows/: ci.yml
src/: cb_cookiefile.c  cb_cookiefile.h  common.cpp  jpeg-io.cpp  jpeg-io.hpp  png-io.cpp  png-io.hpp  tiff-io.c  tiff-io.cpp  tiff-io.h  tiff-io.hpp  util.c  util.cpp  util.h  util.hpp  wasm-big-image.d.ts  wasm-big-image.ts
tests/: dep.ts  test_cb_cookiefile.c  test_jpeg-io.cpp  test_png-io.cpp  test_tiff-io.c  test_tiff-io.cpp  test_util.cpp  tests.c  tests.cpp  tiff-io.test.ts  util.cpp  util.hpp
tests/assets/: jpeg0.tiff  sheep.tiff  tiled0.tiff
tests/scripts/: generate_jpeg.py  generate_png.py  generate_tifs.py
